<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="hint">Cost of Service</string>
    <string name="tip_20">Amazing (20%)</string>
    <string name="tip_18">Good (18%)</string>
    <string name="tip_15">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="primary_color">PRIMARY COLOR</string>
    <string name="button">BUTTON</string>
    <string name="secondary_color">SECONDARY COLOR</string>
    <string name="email_icon">EMAIL</string>
</resources>